--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,7 @@
 {
-  "git": {
-    "deploymentEnabled": {
-      "main": false,
-      "SP1": true
-    }
-  },
-  "buildCommand": "echo 'Building with SP1 integration'",
-  "outputDirectory": ".",
-  "rewrites": [
-    {
-      "source": "/sp1-api/:path*",
-      "destination": "https://api.succinct.xyz/api/:path*"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-SP1-Enabled",
-          "value": "true"
-        }
-      ]
-    }
-  ]
+  "version": 2,
+  "buildCommand": null,
+  "devCommand": null,
+  "installCommand": null,
+  "outputDirectory": null
 } 
